--- a/.htaccess
+++ b/.htaccess
@@ -2,6 +2,9 @@ AddDefaultCharset utf-8
 
 RewriteEngine on
 
+RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
