--- a/.htaccess
+++ b/.htaccess
@@ -9,3 +9,5 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
 RewriteRule . index.php
+
+php_flag register_argc_argv On
