--- a/.htaccess
+++ b/.htaccess
@@ -18,3 +18,24 @@ Header append Vary User-Agent
 <FilesMatch ".(flv|gif|jpg|jpeg|png|ico|swf|js|css|pdf|woff|ttf)$">
   Header set Cache-Control "max-age=2592000"
 </FilesMatch>
+
+<ifModule mod_expires.c>
+    ExpiresActive On
+    #по умолчанию кеш в 500 секунд
+    ExpiresDefault "access plus 500 seconds"
+    #кэшировать флэш и изображения на месяц
+    ExpiresByType image/x-icon "access plus 2592000 seconds"
+    ExpiresByType image/jpeg "access plus 2592000 seconds"
+    ExpiresByType image/png "access plus 2592000 seconds"
+    ExpiresByType image/gif "access plus 2592000 seconds"
+    ExpiresByType application/x-shockwave-flash "access plus 2592000 seconds"
+    #кэшировать css, javascript и текстовые файлы на одну неделю
+    ExpiresByType text/css "access plus 604800 seconds"
+    ExpiresByType text/javascript "access plus 604800 seconds"
+    ExpiresByType application/javascript "access plus 604800 seconds"
+    ExpiresByType application/x-javascript "access plus 604800 seconds"
+    #кэшировать html и htm файлы на один день
+    ExpiresByType text/html "access plus 43200 seconds"
+    #кэшировать xml файлы на десять минут
+    ExpiresByType application/xhtml+xml "access plus 600 seconds"
+</ifModule>
