--- a/.htaccess
+++ b/.htaccess
@@ -20,17 +20,18 @@ Header append Vary User-Agent
 </FilesMatch>
 
 <ifmodule mod_expires.c>
-    <filesMatch "\.(ico|gif|jpg|png|jpeg)$">
-        ExpiresActive On
-        ExpiresByType image/jpg "access plus 1 year"
-        ExpiresByType image/jpeg "access plus 1 year"
-        ExpiresByType image/gif "access plus 1 year"
-        ExpiresByType image/png "access plus 1 year"
-        ExpiresByType text/css "access plus 1 month"
-        ExpiresByType application/pdf "access plus 1 month"
-        ExpiresByType text/x-javascript "access plus 1 month"
-        ExpiresByType application/x-shockwave-flash "access plus 1 month"
-        ExpiresByType image/x-icon "access plus 1 year"
-        ExpiresDefault "access plus 22 days"
-    </filesMatch>
+
+    ExpiresActive On
+    ExpiresByType image/jpg "access plus 1 year"
+    ExpiresByType image/jpeg "access plus 1 year"
+    ExpiresByType image/gif "access plus 1 year"
+    ExpiresByType image/png "access plus 1 year"
+    ExpiresByType text/css "access plus 1 month"
+    ExpiresByType application/pdf "access plus 1 month"
+    ExpiresByType text/x-javascript "access plus 1 month"
+    ExpiresByType application/x-shockwave-flash "access plus 1 month"
+    ExpiresByType image/x-icon "access plus 1 year"
+    ExpiresByType text/html "access plus 2 days 12 hours"
+    ExpiresDefault "access plus 22 days"
+
 </ifmodule>
