--- a/.htaccess
+++ b/.htaccess
@@ -38,14 +38,5 @@ Header append Vary User-Agent
 
 
 <IfModule pagespeed_module>
-    ModPageSpeed on
-    #ModPagespeedRewriteLevel CoreFilters
-    #ModPagespeedEnableFilters prioritize_critical_css
-    #ModPagespeedEnableFilters defer_javascript
-    #ModPagespeedEnableFilters sprite_images
-    #ModPagespeedEnableFilters convert_png_to_jpeg,convert_jpeg_to_webp
-    #ModPagespeedEnableFilters collapse_whitespace,remove_comments
-
-    ModPagespeedEnableFilters combine_css
-    ModPagespeedEnableFilters insert_dns_prefetch
+    ModPageSpeed off
 </IfModule>
